update the approve post method, fix some layout bugs

--- a/MarketPlaceClient/src/app/admin-module/approve-posts/approve-posts.component.css
+++ b/MarketPlaceClient/src/app/admin-module/approve-posts/approve-posts.component.css
@@ -1,12 +1,23 @@
 
 .example-card {
   
-    border-style: solid;
-    border-width: 1px;
+    /* border-style: solid;
+    border-width: 1px; */
   }
   
   .example-header-image {
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
+  }
+  mat-card img{
+  width: 100%;
+  height:200px;
+ object-position: center;
+  object-fit: fill;
+  margin-left: 1px;
+  }
+  .container{
+    padding: 20px;
+    background-color: lightgray;
   }
  
